--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@
   --weight-bold: 700;
   --weight-semi-bold: 600;
   --weight-regular: 400;
+
+  /* Size */
+  --size-border-radius: 4px;
 }
 
 /* Universal tags */
@@ -33,6 +36,21 @@
 	box-sizing: border-box;
 }
 
+body{
+  margin: 0;
+  font-family: 'Sans', sans-serif;
+  cursor: default;
+}
+
+a{
+  text-decoration: none;
+  color: var(--color-white);
+}
+
+ul{
+  list-style: none;
+  padding-left: 0;
+}
 /* Typography */
 h1{
   font-size: var(--font-large);
@@ -60,4 +78,39 @@ p{
   font-weight: var(--weight-regular);
   color: var(--color-black);
   margin: 4px 0;
+}
+
+/* Navbar */
+
+#navbar{
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--color-pink);
+  align-items: center;
+  color: var(--color-white);
+  padding: 16px;
+}
+
+.navbar__menu{
+  display: flex;
+  /* justify-content: ; */
+}
+
+.navbar__logo{
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold) ;
+}
+.navbar_menu__item{
+  padding: 8px 12px;
+  margin: 0 4px;
+  cursor: pointer;
+  border-radius: var(--size-border-radius);
+}
+
+.navbar_menu__item.active{
+  border: 1px solid var(--color-white);
+} 
+
+.navbar_menu__item:hover{
+  background-color: var(--color-dark-pink);
 }
