--- a/style.css
+++ b/style.css
@@ -51,6 +51,13 @@ ul{
   list-style: none;
   padding-left: 0;
 }
+
+button{
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
 /* Typography */
 h1{
   font-size: var(--font-large);
@@ -96,6 +103,7 @@ p{
   /* justify-content: ; */
 }
 
+/* Navbar */
 .navbar__logo{
   font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold) ;
@@ -113,4 +121,34 @@ p{
 
 .navbar_menu__item:hover{
   background-color: var(--color-dark-pink);
+} 
+
+/* Home */
+#home{
+  background: url('imgs/home-background.png') 
+  center/cover no-repeat;
+  padding: 40px;
+  text-align: center;
+}
+
+.home__avartar{
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
+}
+
+.home__titile,
+.home__description{
+  color : var(--color-white);
+}
+
+.home__contact {
+  color: var(--color-white);
+  font-size: var(--weight-regular);
+  font-weight: var(--weight-bold);
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
 }
