--- a/style.css
+++ b/style.css
@@ -161,8 +161,11 @@ p{
 .section{
   padding: 50px;
   text-align: center;
-  max-width: 1200px;
   margin: auto;
+}
+
+.section__container{
+  max-width: 1200px;
 }
 
 .about__majors{
@@ -225,4 +228,56 @@ p{
 
 .job__description {
   font-size: var(--font-large);
+}
+
+#skill{
+  background-color: var(--color-yellow);
+}
+
+.skillset{
+  display: flex;
+  background-color: var(--color-light-grey);
+  color: var(--color-white);
+  margin: 20px 0;
+}
+
+.skill{
+  margin-bottom: 32px;
+}
+
+.skillset__title{
+  color: var(--color-white);
+}
+
+.skill__description{
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0 ;
+}
+
+.skill__bar{
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-grey);
+}
+
+.skill__value{ 
+  height: 3px;
+  background-color: var(--color-orange);
+}
+.skillset__left{
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding: 20px 40px;
+}
+.skillset__right{
+  flex-basis: 40%;
+}
+
+.tools {
+  background-color: var(--color-grey);
+}
+
+.tools, .etc{
+    padding: 20px;
 }
