--- a/style.css
+++ b/style.css
@@ -230,6 +230,8 @@ p{
   font-size: var(--font-large);
 }
 
+/* Skill */
+
 #skill{
   background-color: var(--color-yellow);
 }
@@ -280,4 +282,111 @@ p{
 
 .tools, .etc{
     padding: 20px;
+}
+
+/* Work */
+.work__categories{
+  margin: 40px;
+}
+
+.category__btn{
+  border: 1px solid var(--color-dark-white);
+  border-radius: var(--size-border-radius);
+  font-size: var(--font-regular);
+  padding: 8px 48px;
+}
+
+.category__btn.active,
+.category__btn:hover{
+  background-color: var(--color-pink);
+  color: var(--color-white);
+}
+
+.category__btn.active .category__count,
+.category__btn:hover .category__count
+{
+  opacity: 1;
+  top: 0px;
+  
+}
+
+.category__count{
+  background-color: var(--color-orange);
+  border-radius: 50%;
+  color: var(--color-white);
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  display: inline-block;
+  position: relative;
+  top: -20px;
+  left: 4px;
+
+  opacity: 0;
+  transition: all var(--animation-duration) ease;
+}
+
+/* Work-Project */
+
+.work__projects{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.project{
+  position: relative;
+  width: 280px;
+  height: 250px;
+  margin: 2px;
+  /* border: 2px solid var(--color-black);
+  border-radius: 10px;
+  background-color: var(--color-light-white); */
+  background-color: var(--color-dark-white);
+  /* color: var(--weight-bold); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.project:hover .project__description{
+  opacity: 0.6;
+  transform: translateY(0px);
+}
+
+.project_img{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.project__description{
+  position: absolute;
+  background-color: var(--color-black);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+  transition: all var(--animation-duration) ease-in;
+  transform: translateY(10px);
+}
+
+.project__description h3{
+  color: var(--color-white);
+}
+
+.project__description h3:after{
+  content:'';
+  width: 25px;
+  height: 2px;
+  background-color: var(--color-white);
+  display: block;
+  position: relative;
+  left: 50%;
+  margin-left: -12px; 
+  margin-top: 8px;
+
 }
