--- a/style.css
+++ b/style.css
@@ -390,3 +390,48 @@ p{
   margin-top: 8px;
 
 }
+
+/* Testimonial */
+#testmonial{
+  background-color: var(--color-dark-white);
+}
+
+.testimonials{
+  margin: 40px;
+}
+
+.testimonial_item{
+  display: flex;
+  margin: 32px 0; 
+
+}
+
+.testimonial__avarta{
+  width : 100px;
+  height: 100px;
+  /* max-width: 100%;
+  max-height: 100%; */
+  border-radius: 50%;
+  /* margin : 12px; */
+}
+
+.testimonial__avarta:nth-child(odd){
+  margin-right: 40px;
+}
+
+.testimonial__avarta:nth-child(even){
+  margin-left: 40px;
+}
+
+.testimonial__speech-bubble{
+  padding: 18px;
+  background-color: var(--color-white);
+  border-radius: var(--size-border-radius);
+}
+
+.testimonial__speech-bubble p{
+  color: var(--color-light-grey);
+}
+.testimonial__speech-bubble a{
+  color: var(--color-pink);
+}
