--- a/style.css
+++ b/style.css
@@ -206,10 +206,10 @@ p{
   font-size: var(--font-small);
 }
 
-.jobs {
+
+.job {
   display: flex;
   align-items: center;
-  
 }
 
 .job__description{
@@ -226,8 +226,8 @@ p{
   font-size: var(--font-small);
 }
 
-.job__description {
-  font-size: var(--font-large);
+.job__period {
+  font-size: var(--font-micro);
 }
 
 /* Skill */
@@ -325,6 +325,7 @@ p{
   opacity: 0;
   transition: all var(--animation-duration) ease;
 }
+
 
 /* Work-Project */
 
@@ -434,4 +435,30 @@ p{
 }
 .testimonial__speech-bubble a{
   color: var(--color-pink);
+}
+
+/* Contact */
+#contact{
+  background-color: var(--color-pink);
+}
+
+.contact__title,
+.contact__email,
+.contact__rights{
+  color: var(--color-white);
+}
+
+.contact__title{
+  margin: 32px 0;
+}
+
+.contact__links{
+  font-size: var(--font-large);
+  margin: 24px 0;
+}
+
+.contact__links i:hover{
+  transform: scale(1.1);
+  color: var(--color-yellow);
+  transition: all var(--animation-duration) ease-in;
 }
