--- a/style.css
+++ b/style.css
@@ -99,12 +99,17 @@ p{
   align-items: center;
   color: var(--color-white);
   padding: 16px;
-}
+}  
 
 .navbar__menu{
   display: flex;
-  /* justify-content: ; */
+  justify-content: center; 
 }
+/* 
+.navbar__menu__block{
+  display: flex;
+  justify-content: center;
+} */
 
 /* Navbar */
 .navbar__logo{
@@ -125,6 +130,15 @@ p{
 .navbar_menu__item:hover{
   background-color: var(--color-dark-pink);
 } 
+
+.navbar__toggle-btn {
+  position: absolute;
+  top: 15px;
+  right: 32px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
+}
 
 /* Home */
 #home{
@@ -166,6 +180,7 @@ p{
 
 .section__container{
   max-width: 1200px;
+  justify-content: center;
 }
 
 .about__majors{
@@ -238,6 +253,7 @@ p{
 
 .skillset{
   display: flex;
+  /* justify-content: center; */
   background-color: var(--color-light-grey);
   color: var(--color-white);
   margin: 20px 0;
@@ -462,3 +478,45 @@ p{
   color: var(--color-yellow);
   transition: all var(--animation-duration) ease-in;
 }
+
+@media screen and (max-width: 768px){
+  .navbar__toggle-btn{
+    display: block;
+  }
+
+  #navbar{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar__menu{
+    flex-direction: c olumn;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+
+  .about__majors{
+    flex-direction: column;
+  }
+  .major{
+    margin-bottom: 38px;
+  }
+
+  .skillset{
+    flex-direction: column;
+  }
+
+  .work__categories{
+    flex-direction: column;
+  }
+
+  .project{
+    flex-grow: 1;
+  }
+
+  .testimonial__avarta{
+    width: 80px;
+    height: 80px;
+  }
+}  
