--- a/style.css
+++ b/style.css
@@ -93,13 +93,22 @@ p{
 /* Navbar */
 
 #navbar{
+  position: fixed;
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-pink);
+  /* background-color: var(--color-pink); */
+  background-color: transparent; 
   align-items: center;
   color: var(--color-white);
-  padding: 16px;
+  padding: 16px; 
+  width: 100%;
 }  
+
+#navbar.navbar--dark{
+  background-color: var(--color-pink);
+  padding: 8px;
+  transition: all var(--animation-duration) ease-in-out;
+}
 
 .navbar__menu{
   display: flex;
@@ -146,6 +155,7 @@ p{
   center/cover no-repeat;
   padding: 40px;
   text-align: center;
+  padding-top: 100px;
 }
 
 .home__avartar{
