--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@ p{
   color: var(--color-white);
   padding: 16px; 
   width: 100%;
-}  
+  z-index: 1px;
+}   
 
 #navbar.navbar--dark{
   background-color: var(--color-pink);
@@ -419,7 +420,7 @@ p{
 }
 
 /* Testimonial */
-#testmonial{
+#testimonial{
   background-color: var(--color-dark-white);
 }
 
