--- a/style.css
+++ b/style.css
@@ -131,13 +131,11 @@ p{
   margin: 0 4px;
   cursor: pointer;
   border-radius: var(--size-border-radius);
+  border: 1px solid transparent;
 }
 
-.navbar_menu__item.active{
-  border: 1px solid var(--color-white);
-} 
-
 .navbar_menu__item:hover{
+  border: 1px solid var(--color-white);
   background-color: var(--color-dark-pink);
 } 
 
@@ -164,6 +162,10 @@ p{
   height: 250px;
   border-radius: 50%;
   border: 2px solid var(--color-light-white);
+}
+
+.home__avartar:active{
+
 }
 
 .home__titile,
@@ -323,13 +325,13 @@ p{
   padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover{
   background-color: var(--color-pink);
   color: var(--color-white);
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count
 {
   opacity: 1;
