--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ p{
 }
 
 .project__description h3{
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
 .project__description h3:after{
@@ -532,6 +532,7 @@ p{
   #navbar{
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-pink);
   }
 
   .navbar__menu{
@@ -539,6 +540,10 @@ p{
     text-align: center;
     width: 100%;
     display: none;
+  }
+
+  .navbar__menu.open{
+    dosplay: block;
   }
 
   .about__majors{
